Fix : when text was overflowing, the nav cmp wasn't realizing

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -131,7 +131,7 @@ $citationHeight: 50px;
 .citationContainer {
 	margin-top: 20px;
 	width: 95%;
-	height: $citationHeight;
+	height: auto;
 
 	display: grid;
 	grid-template-columns: 10% 17% 73%;
